Implemented a lot... like... A LOT

--- a/SimTECH/SimTECH/Pages/Factors/Climates.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Climates.razor
@@ -2,8 +2,8 @@
 @inject ClimateService _climateService
 @inject IDialogService _dialogService
 
-<MudContainer MaxWidth="MaxWidth.Large">
-    <MudDataGrid T="Climate" Items="@ClimateData" Dense="true" Class="overflow-hidden mt-2">
+<MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
+    <MudDataGrid T="Climate" Items="@ClimateData" Dense="true" Class="overflow-hidden">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Climate</MudText>
             <MudSpacer />
