--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -5,8 +5,8 @@
 
 <PageTitle>Leagues</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.Large">
-    <MudDataGrid T="League" Items="@LeagueData" Loading="_loading" LoadingProgressColor="Color.Info" Bordered="true" Class="my-2">
+<MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
+    <MudDataGrid T="League" Items="@LeagueData" Loading="@_loading" LoadingProgressColor="Color.Info" Bordered="true">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Leagues</MudText>
             <MudSpacer />
