--- a/SimTECH/SimTECH/Pages/Season/AddRaces.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddRaces.razor
@@ -21,7 +21,7 @@
         }
         <MudContainer Class="@(lastStep ? "d-none" : string.Empty)">
             <MudPaper>
-                <MudTable T="Track" @bind-SelectedItems="selectedTracks" Items="Tracks" MultiSelection="true" Hover="true">
+                <MudTable T="Track" @bind-SelectedItems="@selectedTracks" Items="@Tracks" MultiSelection="true" Hover="true">
                     <HeaderContent>
                         <MudTh>Name</MudTh>
                         <MudTh>Country</MudTh>
