--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
@@ -3,12 +3,11 @@
 @using MudExtensions.Enums;
 @using MudExtensions.Utilities
 @using SimTECH.Pages.Season.EntrantWizard.Steps
-
 @inject SeasonService _seasonService
 @inject SeasonEntrantService _entrantService
 @inject NavigationManager _nav
 
-<MudContainer MaxWidth="MaxWidth.ExtraLarge">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     <MudPaper Elevation="5">
         <CascadingValue Value="@Model">
             <MudStepper @ref="stepper"
