--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -4,8 +4,8 @@
 
 <PageTitle>Engines</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.Medium">
-    <MudDataGrid T="Engine" Items="@EngineData" Dense="true" Class="my-2">
+<MudContainer MaxWidth="MaxWidth.Medium" Class="mt-4">
+    <MudDataGrid T="Engine" Items="@EngineData" Dense="true">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Engines</MudText>
             <MudSpacer />
