--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -5,8 +5,8 @@
 
 <PageTitle>Teams</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.Medium">
-    <MudDataGrid T="Team" Items="@TeamData" Dense="true" Class="mt-2">
+<MudContainer MaxWidth="MaxWidth.Medium" Class="mt-4">
+    <MudDataGrid T="Team" Items="@TeamData" Dense="true">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Teams</MudText>
             <MudSpacer />
