--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -6,8 +6,8 @@
 
 <PageTitle>Traits</PageTitle>
 
-<MudContainer>
-    <MudDataGrid T="Trait" Items="@TraitData" Dense="true" Class="mt-2">
+<MudContainer Class="mt-4">
+    <MudDataGrid T="Trait" Items="@TraitData" Dense="true">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Traits</MudText>
 
