--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -18,7 +18,17 @@
                 </MudItem>
                 <MudItem xs="12" sm="6">
                     <MudPaper Elevation="2" MinHeight="300px" Class="pa-4">
-                        Gerrit
+                        <MudStack Spacing="1">
+                            <MudText Typo="Typo.h4">H4</MudText>
+                            <MudText Typo="Typo.h6">H6</MudText>
+                            <MudText Typo="Typo.subtitle1">Subtitle 1</MudText>
+                            <MudText Typo="Typo.subtitle2">Subtitle 2</MudText>
+                            <MudText Typo="Typo.body1">Body 1</MudText>
+                            <MudText Typo="Typo.body2">Body 2</MudText>
+                            <MudText Typo="Typo.overline">Overline</MudText>
+                            <MudText Typo="Typo.caption">Caption</MudText>
+                            <MudText Typo="Typo.button">Button</MudText>
+                        </MudStack>
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12" sm="6">
