--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -3,12 +3,10 @@
 @implements IDisposable
 
 <MudThemeProvider @bind-IsDarkMode="@isDarkTheme" Theme="@theme" />
-<MudDialogProvider
-    MaxWidth="MaxWidth.Large"
-    CloseButton="true"
-    DisableBackdropClick="true"
-    Position="DialogPosition.Center"
-/>
+<MudDialogProvider MaxWidth="MaxWidth.Large"
+                   CloseButton="true"
+                   DisableBackdropClick="true"
+                   Position="DialogPosition.Center" />
 <MudSnackbarProvider />
 
 <MudLayout>
