--- a/SimTECH/SimTECH/Components/CountryNamedFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryNamedFlag.razor
@@ -1,4 +1,4 @@
-﻿<MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Reverse="@Reverse" Class="pa-0">
+﻿<MudStack Row="true" Justify="@Justify" AlignItems="AlignItems.Center" Reverse="@Reverse" Class="pa-0">
     <CountryFlag Code="@Code" Size="@Size" Class="@(_countryClasses)" />
     <span class="mx-2"></span>
     <MudText>@flagNationName</MudText>
@@ -7,13 +7,12 @@
 @code {
     [Parameter]
     public Country Code { get; set; }
-
     [Parameter]
     public FlagSize Size { get; set; } = FlagSize.Normal;
-
+    [Parameter]
+    public Justify Justify { get; set; } = Justify.SpaceBetween;
     [Parameter]
     public string Class { get; set; } = string.Empty;
-
     [Parameter]
     public bool Reverse { get; set; } = false;
 
