--- a/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
@@ -5,7 +5,7 @@
 @inject TraitService _traitService
 @inject BreadcrumbProvider _bread
 
-<MudContainer MaxWidth="MaxWidth.ExtraLarge">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     <MudGrid>
         <MudItem xs="12">
             <MudPaper Elevation="15" Height="75px" Class="d-flex flex-column justify-center align-center pa-4">
