--- a/SimTECH/SimTECH/Pages/Statistics/Stats.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/Stats.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Statistics</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.False">
+<MudContainer MaxWidth="MaxWidth.False" Class="mt-4">
     <MudGrid>
         <MudItem xs=12>
             <MudPaper Elevation="15" Height="100px" Class="d-flex flex-row justify-center pa-4">
